--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 .byebug_history
 /public/packs
 /node_modules
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+yarn-error.log*
+.yarn-integrity
