--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "champ",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^3.2.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-loader": "7.x",
@@ -31,6 +32,6 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.11.1"
   }
 }
